[metadata]
name = ansi-NekointheShell
version = 1
author = neko
author_email = neko@127.0.0.1
description = Terminal codes for setting text color and other various effects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NekointheShell/ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src
